# sc-trade-dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  TASKS.md  activar.cmd  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: activar.cmd  analysis.py  config.py  db.py  hauls.py  log_parser.py  report.py
app/web/: main.py
app/web/static/: main.js  styles.css
app/web/templates/: dashboard.html
scripts/: generate_report.py
tests/: pipeline_util.py  test_analysis.py  test_generate_report.py  test_hauls.py  test_log_parser.py  test_log_root.py  test_pipeline.py  test_report.py  test_websocket.py
