[project]
name = "sc-trade-dashboard"
version = "0.1.0"
description = "Web dashboard for Star Citizen trading data parsed from game logs."
authors = [{ name = "Tu Nombre", email = "you@example.com" }]
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.117",
  "uvicorn[standard]>=0.29",
  "pandas>=3.0",
  "plotly>=5.22",
  "jinja2>=3.2",
  "python-multipart>=0.0.9"
]
[project.optional-dependencies]
dev = ["pytest", "coverage", "black", "isort", "flake8", "mypy", "pre-commit"]

[tool.black]
line-length = 88
